fixed styling on mobile

--- a/style.css
+++ b/style.css
@@ -40,17 +40,9 @@ body {
   max-width: 1100px;
   margin: auto;
   background: none;
-  /* backdrop-filter: blur(30px); */
-  /* background-image: linear-gradient(
-    120deg,
-    rgba(255, 255, 255, 0.1),
-    rgba(0, 0, 0, 1)
-  ); */
-  /* background-size: 30px; */
-  padding: 20px;
+  padding: 10px;
   border-radius: 10px;
   box-sizing: border-box;
-  /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); */
   display: flex;
   flex-direction: column;
   flex: 1;
@@ -73,14 +65,6 @@ h2 {
 h2 {
   font-size: 2.25rem;
   margin-bottom: 3rem;
-}
-
-/* Responsive styles */
-@media (min-width: 640px) {
-  /* sm breakpoint */
-  h2 {
-    font-size: 3rem; /* Equivalent to text-5xl */
-  }
 }
 
 /* Style for the white-gradient span */
@@ -177,6 +161,7 @@ input {
   border: 0;
   color: #fff;
   border-bottom: 1px solid #ccc;
+  width: 100%;
 }
 
 .result {
@@ -262,6 +247,17 @@ input {
   .result {
     margin-top: 2rem;
   }
+  #game-container {
+    padding-left: 0;
+    padding-right: 0;
+    border: none;
+  }
+  h1 {
+    font-size: 2.8rem;
+  }
+  h2 {
+    font-size: 2rem; /* Equivalent to text-5xl */
+  }
 }
 
 .footer-game-container #next,
@@ -297,6 +293,7 @@ footer {
   position: relative;
   bottom: 0;
   margin: auto;
+  margin-bottom: 2rem;
   font-size: 0.75rem;
 }
 
